# traceraptor

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
examples/: CMakeLists.txt  main.cpp
src/: BBox.cpp  BBox.h  BVH.cpp  BVH.h  CMakeLists.txt  Camera.h  Color.h  Hitable.h  HitableList.h  Image.cpp  Image.h  Intersection.h  Logger.h  Material.h  MathUtil.h  Primitive.h  Ray.h  RayTracingStatistics.h  Renderer.h  SceneLoader.cpp  SceneLoader.h  Shape.h  Sphere.h  Texture.h  Traceraptor.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  UtilMath.h  Vec.h  Vec3.cpp  Vec3.h  main.cpp
src/accelerators/: BVH.cpp  BVH.h  BVHAccel.cpp  BVHAccel.h
src/examples/: CMakeLists.txt  main.cpp
src/integrators/: Integrator.cpp  Integrator.h
src/shapes/: Sphere.h  Triangle.cpp  Triangle.h
test/: CMakeLists.txt  minunit.h  test_bvh.cpp  testing_foobar.c
